--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
+    background-color: #f2f2f2;
     font-family: Arial, sans-serif;
-    background-color: #f4f6f8;
-    text-align: center;
-    margin-top: 100px;
 }
 
 h1 {
-    color: #2c3e50;
+    color: blue;
+    text-align: center;
 }
 
 p {
-    color: #555;
+    color: #333;
     font-size: 18px;
+    text-align: center;
 }
